# cloud_automation

./: pyproject.toml  readme.md
cloudapi/gcp/: disk.py  image.py  metadata.py  vm.py
infraservice/: main.py  service_set.py
tests/: test_vm.py
